--- a/layout.html
+++ b/layout.html
@@ -15,6 +15,14 @@
         <div class="footer"></div>
     </div>
 
-    
+    <div class="container1">
+        <div class="left">
+            <div class="user-info"></div>
+            <div class="article"></div>
+        </div>
+        <div class="right">
+            <img class="thumbnail" src="./img/eximg2.jpg">
+        </div>
+    </div>
 </body>
 </html>
