--- a/layout.html
+++ b/layout.html
@@ -17,8 +17,19 @@
 
     <div class="container1">
         <div class="left">
-            <div class="user-info"></div>
-            <div class="article"></div>
+            <div class="user-info">
+                <div class="profile">
+                    <img class="photo" src="./img/eximg1.jpg">
+                </div>
+                <div class="user-name">
+                    <p style="font-weight: bold;">히키맨</p>
+                    <p>1시간 전</p>
+                </div>
+            </div>
+            <div class="article">
+                <h3>그럼 뭐합니까 이 게임 제가 이겼어요</h3>
+                <p>Lorem ipsum dolor sit amet, Lorem ipsum dolor consectetur adipisicing elit. Modi tempore nihil vitae non quod repudiandae?</p>
+            </div>
         </div>
         <div class="right">
             <img class="thumbnail" src="./img/eximg2.jpg">
