--- a/layout2.html
+++ b/layout2.html
@@ -10,15 +10,12 @@
 
 <body>
     <div class="main-background">
-        <div class="slogan">
+        <div class="main-slogan">
             <p>Buy our excellent shoes!</p>
         </div>
-        <div class="content">
+        <div class="main-content">
            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos quisquam sapiente a quam sequi repellat voluptatibus. Porro, nesciunt totam!</p>
-           <button class="btn">Buy Now</button>
-        </div>
-        <div class="btn">
-            
+           <button class="main-btn">Buy Now</button>
         </div>
     </div>
 </body>
