--- a/layout2.html
+++ b/layout2.html
@@ -17,7 +17,7 @@
            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos quisquam sapiente a quam sequi repellat voluptatibus. Porro, nesciunt totam!</p>
            <button class="main-btn">Buy Now</button>
         </div>
+        <div class="gray-background"></div>
     </div>
 </body>
-
 </html>
