--- a/layout2.html
+++ b/layout2.html
@@ -17,7 +17,10 @@
            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos quisquam sapiente a quam sequi repellat voluptatibus. Porro, nesciunt totam!</p>
            <button class="main-btn">Buy Now</button>
         </div>
-        <div class="gray-background"></div>
+        <div class="gray-background">
+            <h4 class="gray-title">How we design our shoes</h4>
+            <p class="gray-content">Lorem, ipsum dolor adipisicing elit. Cum? sit amet consectetur adipisicing elit. Quam error, dicta quos doloremque provident dolor.</p>
+        </div>
     </div>
 </body>
 </html>
