--- a/layout2.html
+++ b/layout2.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+
+    <div class="flex-nav">
+        <div class="flex-item"><p>Logo</p></div>
+        <div class="flex-item" style="flex-grow: 2;"></div>
+        <div class="flex-item"><p>products</p></div>
+        <div class="flex-item"><p>services</p></div>
+    </div>
     <div class="main-background">
         <div class="main-slogan">
             <p>Buy our excellent shoes!</p>
@@ -19,7 +26,7 @@
         </div>
         <div class="gray-background">
             <h4 class="gray-title">How we design our shoes</h4>
-            <p class="gray-content">Lorem, ipsum dolor adipisicing elit. Cum? sit amet consectetur adipisicing elit. Quam error, dicta quos doloremque provident dolor.</p>
+            <p class="gray-content">Lorem, ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, fugiat? dolor adipisicing elit. Cum? sit amet consectetur adipisicing elit. Quam error, dicta quos doloremque provident dolor.</p>
         </div>
     </div>
 </body>
