--- a/animation.html
+++ b/animation.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/animation.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="shop-bg">
         <div class="shop-container">
             <div class="shop-item">
-                <img src="./img/product1.jpg">
+                <div style="position: relative; overflow: hidden;">
+                    <div class="overlay"></div>
+                    <img src="./img/product1.jpg">
+                </div>
             </div>
             <div class="shop-item">
                 <img src="./img/product2.jpg">
@@ -19,6 +24,7 @@
                 <img src="./img/product3.jpg">
             </div>
         </div>
-    </div>    
+    </div>
 </body>
+
 </html>
