--- a/landing.html
+++ b/landing.html
@@ -5,18 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/landing.css">
     <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-gothic.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Document</title>
 </head>
 <body>
     <div class="bg-size bg-gradient flex">
-        <div class="flex-size">
+        <div class="flex-50">
             <p class="font-l">Landing Page for Apps</p>
             <p class="font-s">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Nostrum animi nihil iusto autem? Sit, repellat?</p>
             <button class="main-btn font-s">Show More</button>
         </div>
-        <div class="flex-size">
-            
+        <div class="flex-50">
+            <div class="iphone">
+                <img class="iphone-img" src="./img/iphone.png">
+            </div>
         </div>
+    </div>
+    <div class="bg-size">
+        <p class="font-m font-black center-text">It is the perfect theme for your new Project!</p>
+        <p class="font-s font-black center-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci?</p>
+        <button class="main-btn center-btn">Show Portfolio</button>
+    </div>
+    <div class="bg-size bg-blue">
+        <p class="font-s center-text" style="padding-bottom: 0;">services</p>
+        <p class="font-m center-text" style="padding-top: 0;">What We Offer</p>
+        <div class="flex bg-icon">
+            <div class="flex-25 center-text">
+                <i class="fa-solid fa-comments fa-2x icons"></i>
+                <p class="font-m">Responsive</p>
+                <p class="font-s">Lorem ipsum dolor sit.</p>
+            </div>
+            <div class="flex-25 center-text">
+                <i class="fa-solid fa-wand-magic-sparkles fa-2x icons"></i>
+                <p class="font-m">Responsive</p>
+                <p class="font-s">Lorem ipsum dolor sit.</p>
+            </div>
+            <div class="flex-25 center-text">
+                <i class="fa-solid fa-bolt-lightning fa-2x icons"></i>
+                <p class="font-m">Responsive</p>
+                <p class="font-s center-text">Lorem ipsum dolor sit.</p>
+            </div>
+            <div class="flex-25 center-text">
+                <i class="fa-solid fa-earth-americas fa-2x icons"></i>
+                <p class="font-m">Responsive</p>
+                <p class="font-s">Lorem ipsum dolor sit.</p>
+            </div>
+        </div>
+    </div>
+    <div class="bg-size" style="padding-top: 20px; padding-bottom: 20px;">
+        <p class="font-s font-black center-text" style="padding-bottom: 0;">Portfolio</p>
+        <p class="font-m font-black center-text" style="padding-top: 0;">What we can Do</p>
+    </div>
+    <div class="bg-size" style="padding-top: 0px;">
+        <div class="bg-img flex">
+            <div class="flex-50 bg-img1">
+                <p class="font-m">Stationary</p>
+                <p class="font-s">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="flex-50 bg-img2">
+                <p class="font-m">Stationary</p>
+                <p class="font-s">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="flex-50 bg-img3">
+                <p class="font-m">Stationary</p>
+                <p class="font-s">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="flex-50 bg-img4">
+                <p class="font-m">Stationary</p>
+                <p class="font-s">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+    </div>
+    <div class="bg-size center-text" style="padding-bottom: 30px;">
+        <i class="fa-brands fa-google icons-reverse"></i>
+        <i class="fa-brands fa-twitter icons-reverse"></i>
+        <i class="fa-brands fa-instagram icons-reverse"></i>
+        <p class="font-s font-black center-text">©Hikiman</p>
     </div>
 </body>
 </html> 
